fix low contrast

--- a/css/style.css
+++ b/css/style.css
@@ -352,7 +352,7 @@ ul.social {
 }
 
 .nav-pills>.nav-item>.active {
-    background-color: var(--color4);
+    background-color: var(--color5);
 }
 
 /* contact */
